--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Spotify Downloader</title>
+  <title>Razorpay Clone</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <h2>Spotify Song Downloader</h2>
-    <input type="text" id="songUrl" placeholder="Paste Spotify Song URL"/>
-    <button onclick="downloadSong()">Download</button>
-    <p id="result"></p>
-  </div>
-  <script src="script.js"></script>
+  <nav>
+    <h2>Razorpay</h2>
+    <ul>
+      <li>Payments</li>
+      <li>Banking</li>
+      <li>Payroll</li>
+    </ul>
+    <button>Sign Up</button>
+  </nav>
+  <section class="hero">
+    <div>
+      <h1>Easy Payments for Businesses</h1>
+      <p>Accept payments seamlessly.</p>
+    </div>
+  </section>
 </body>
 </html>
